deployment/k8s-aws/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wealthwatch
  labels:
    name: wealthwatch
    environment: production
